# hfdatalibrary

./: .gitignore  404.html  CITATION.cff  IEX_PIPELINE_PLAN.md  LICENSE  PARTNER_TOOLKIT_PLAN.md  README.md  SEO_STRATEGY.md  TOOLKIT_IMPLEMENTATION_PLAN.md  WEBSITE_PLAN.md  _headers  _redirects  huggingface_README.md  index.html  robots.txt  sitemap.xml  zenodo_README.md
.claude/: MISTAKES.md
api/: migrate_download_channel.sql  schema.sql  schema_live_20260717.sql  schema_newsletter.sql  schema_security.sql  schema_v2.sql  wrangler.toml
auth/: callback.html  sso-demo.html
clients/python/: README.md  _smoke_test.py  pyproject.toml
clients/python/examples/: momentum_sp500.py
clients/python/hfdatalibrary/: __init__.py  client.py
clients/python/hfdatalibrary/lab/: __init__.py  _backtest.py  _coverage.py  _panel.py  _universe.py
clients/python/tests/: test_backtest.py  test_coverage.py  test_panel.py  test_universe.py
css/: style.css
data/: classify_tickers.py  metadata.json  ticker_meta.json  tickers.json
js/: site.js
pages/: account.html  admin.html  ai-prompts.html  api.html  changelog.html  cite.html  code.html  contact.html  data.html  dictionary.html  docs.html  download.html  issues.html  license.html  mcp.html  privacy.html  reset.html  stats.html  status.html  taq-crsp-alternative.html  terms.html  tickers.html  unsubscribe.html  verify.html  versions.html
pipeline/: aggregate.py  build_bars.py  catchup_variables.py  clean_pipeline.py  compute_variables.py  daily_update.py  hist_backfill_bars.py  hist_backfill_download.py  iex_manifest.py  (+13 more)
(+19 files in other folders)
